--- a/src/content/posts/becoming-sloane.mdx
+++ b/src/content/posts/becoming-sloane.mdx
@@ -10,6 +10,72 @@ image:
   alt: "The text 'Becoming Sloane' is rendered in a variety of fonts as if clipped from different newspaper and magazine pages."
 ---
 
+On May 15, 2025, in Somerville, MA, the [Massachusetts Transgender Political Coalition](https://www.masstpc.org/) held the 15th Annual [Professionals for Trans Rights](https://www.masstpc.org/ptr/). At the event, MTPC aired the following interview, [Becoming Sloane](https://www.youtube.com/watch?v=8ArZQxnAvBI). Directed and produced by Nayeli Mzîn.
+
 https://www.youtube.com/watch?v=8ArZQxnAvBI
 
-The video was first shared at the MTPC's 15th Annual Professionals for Trans Rights, held in Somerville, MA on May 15, 2025.
+## Transcript
+
+Transcript has been lightly edited for clarity.
+
+### MTPC and Namesake Present: Becoming Sloane
+
+**Sloane:** Hello. My name is Sloane Torrance Patridge. I use they and he pronouns.
+
+I've been living in Boston for like 14, almost 15 years. So I've been here for a long time. I'm an uncle to a sweet 7-year-old who I love very much. So I do a lot of co-parenting.
+
+I'm a barista. I've worked at a lot of different coffee shops, and my reputation precedes me. [Joking] I think, I'm like kind of a mayor of Somerville, in some ways, sometimes. Other ways not.
+
+Sloane is Ferris Bueller's girlfriend. I had such a huge crush on her when I was a kid. This is a smoke show. This is a hottie. And I love this name and I wanna embody that.
+
+My middle name is Torrance, and that is the name of an old partner of mine who died in 2020. She passed away. So I was like, I wanna memorialize her, like I wanna keep her with me and like, you know, carry her around.
+
+### Any other names?
+
+**Interviewer:** Your child that you co-parent, they had a recommendation for a middle name or a last name—
+
+**Sloane:** Oh yeah, he was like, Sloane Bone sounds really good. I was like, honestly? You're not wrong. Sloane Bone Patridge would be sick. Yeah.
+
+I was thinking about, I'm really obsessed with the Ikea monkey from 2012—like, he was the one that was in Ikea with a coat on and got lost—and I was like, maybe I'll be Sloane Ikea Monkey Patridge. I was having a lot of visions of just having like a really ridiculous middle name.
+
+### Why did you change your name?
+
+**Sloane:** I really was honestly like, fully content on not doing it [changing names]. And just like, not committing, going full U-Hauling with the government. I was like, I don't—we don't need to do this.
+
+But I lost my wallet. And I was like, I need to get a new license, so I might as well just name myself. [Laughing]
+
+Presenting more as masculine, as my time taking testosterone has been... [I began to think] I should probably get like a gender marker that is aligning with what I'm being seen as.
+
+Traveling, especially, has been a big concern for me. So I was like also just like, hm! Now's the time. I guess I'm gonna get that big fat 'M' and name myself, Sloane in the eyes of, you know, [the government].
+
+### Where did you hear about MTPC?
+
+**Sloane:** I reached out on social media to ask about name change resources and how I can get some help because I was just like—I'm floundering on my own. And so many people had recommended [Identity Document Assistance Network] IDA and Namesake and MTPC at large...
+
+I think I posted on Lex, too. I was like: "ummmm, help!" Yeah. And everyone was just like, "we have a place for you."
+
+### How did the name change clinic help?
+
+**Sloane:** I've always have anxiety that I'm not gonna be able to complete things. I'm a big starter and not a finisher. [Laughs]
+
+I was [worrying that] I'm gonna go there and I'm not gonna have the documents that I need. And so, I'm gonna get there and it's gonna be shut down. Because although I knew of MTPC and IDA, I didn't know what the actual process was gonna be like.
+
+The setup of the clinic was... it was a bunch of people waiting eagerly to help me [laughs]. I was like, okay, thanks, this is amazing! So I remember already feeling like the ball was rolling while I was there and getting ready. [I was] feeling like I could walk away from that and go to the first step, sooner [rather] than later.
+
+Literally that week, we went to the family probate court, and I got it signed and all settled up and very quickly. Much quicker than I thought. It was really, really surprising to find that it was as easy as it was.
+
+I walked away with it feeling so much more relieved than I thought I was gonna feel. And like a big weight was lifted, in a way that I was very,very, very surprised by. I was just blown away at how easy it was.
+
+I was like, "okay, I gotta start telling everybody that wants to get their name changed to start doing it now. Like, let's get it together. Let's all do it together." You know, kind of emulating and being the accountability that I had been wanting and seeking, and inevitably found that I could receive through the beautiful [checklist that Namesake has](https://app.namesake.fyi).
+
+Honestly, I've referred to [Namesake's checklist] multiple times throughout this process, and have shown people [that] "you too can do this." Like, it feels like a very, [joking] <abbr title="multi-level marketing">MLM</abbr>-like. "You, also can get it done!" But really, you really can. If I can do it, you can do it.
+
+### Advice for other applicants?
+
+**Sloane:** If you have apprehensions, if you have barriers—especially monetary—you're going to be pleasantly surprised to find that you will be able to have this financially alleviated for you.
+
+Just take the leap, ask a friend to join you, you know. I think that you'll find that you'll be able to do it.
+
+---
+
+For assistance changing your name in Massachusetts, [sign up for Namesake](https://app.namesake.fyi) and explore MTPC's [Identity Document Assistance (IDA) Network](https://www.masstpc.org/what-we-do/ida-network/).
