--- a/src/content/posts/becoming-sloane.mdx
+++ b/src/content/posts/becoming-sloane.mdx
@@ -16,15 +16,15 @@ https://www.youtube.com/watch?v=8ArZQxnAvBI
 
 ## Transcript
 
-Transcript has been lightly edited for clarity.
+Transcript has been edited for clarity.
 
 ### MTPC and Namesake Present: Becoming Sloane
 
 **Sloane:** Hello. My name is Sloane Torrance Patridge. I use they and he pronouns.
 
-I've been living in Boston for like 14, almost 15 years. So I've been here for a long time. I'm an uncle to a sweet 7-year-old who I love very much. So I do a lot of co-parenting.
+I've been living in Boston for 14, almost 15 years. So I've been here for a long time. I'm an uncle to a sweet 7-year-old who I love very much. So I do a lot of co-parenting.
 
-I'm a barista. I've worked at a lot of different coffee shops, and my reputation precedes me. [Joking] I think, I'm like kind of a mayor of Somerville, in some ways, sometimes. Other ways not.
+I'm a barista. I've worked at a lot of different coffee shops, and my reputation precedes me. [Joking] I'm kind of a mayor of Somerville, in some ways, sometimes. Other ways not.
 
 Sloane is Ferris Bueller's girlfriend. I had such a huge crush on her when I was a kid. This is a smoke show. This is a hottie. And I love this name and I wanna embody that.
 
