--- a/src/content/posts/becoming-sloane.mdx
+++ b/src/content/posts/becoming-sloane.mdx
@@ -5,9 +5,8 @@ description: >-
 publishDate: 2025-08-26
 authors:
   - eva-decker
-image:
-  src: ../../assets/images/posts/becoming-sloane/cover-3.png
-  alt: "The text 'Becoming Sloane' is rendered in a variety of fonts as if clipped from different newspaper and magazine pages."
+image: ../../assets/images/posts/becoming-sloane/becoming-sloane.png
+imageAlt: "The text 'Becoming Sloane' is rendered in a variety of fonts as if clipped from different newspaper and magazine pages."
 ---
 
 On May 15, 2025, in Somerville, MA, the [Massachusetts Transgender Political Coalition](https://www.masstpc.org/) held the 15th Annual [Professionals for Trans Rights](https://www.masstpc.org/ptr/). At the event, MTPC aired the following interview, [Becoming Sloane](https://www.youtube.com/watch?v=8ArZQxnAvBI). Directed and produced by Nayeli Mzîn.
